--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <header class="navigation">
         <a href="#"><img class="logo" src="images/logo.png" alt="logo" /></a>
         <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">What's New</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" class="active">ホーム</a></li>
+          <li><a href="#">メニュー</a></li>
+          <li><a href="#">ニュース</a></li>
+          <li><a href="#">お問い合わせ</a></li>
         </ul>
       </header>
       <div class="content">
